[package]
name = "salaryman_simulator"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]
bevy-inspector-egui = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
board_plugin = { path = "board_plugin" }
rand = "0.8"

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.24", optional = true }

[workspace]
members = [
    "board_plugin"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3